Bug 61113 - Fix build with ENABLE_PLUGIN_PROCESS=1 for non-mac platforms after r86578
Summary: Fix build with ENABLE_PLUGIN_PROCESS=1 for non-mac platforms after r86578
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-19 00:04 PDT by Carlos Garcia Campos
Modified: 2011-05-19 09:51 PDT (History)
1 user (show)

See Also:


Attachments
Patch (2.27 KB, patch)
2011-05-19 00:06 PDT, Carlos Garcia Campos
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2011-05-19 00:04:59 PDT
PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization is only defined for mac.
Comment 1 Carlos Garcia Campos 2011-05-19 00:06:21 PDT
Created attachment 94048 [details]
Patch
Comment 2 Martin Robinson 2011-05-19 04:54:39 PDT
Comment on attachment 94048 [details]
Patch

Wouldn't it be better to define PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization instead of introducing #ifdefs?
Comment 3 Carlos Garcia Campos 2011-05-19 05:06:55 PDT
(In reply to comment #2)
> (From update of attachment 94048 [details])
> Wouldn't it be better to define PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization instead of introducing #ifdefs?

I don't know what that quirk is, that's why I filed the bug instead of just fixing the build.
Comment 4 Carlos Garcia Campos 2011-05-19 05:16:14 PDT
(In reply to comment #3)
> (In reply to comment #2)
> > (From update of attachment 94048 [details] [details])
> > Wouldn't it be better to define PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization instead of introducing #ifdefs?
> 
> I don't know what that quirk is, that's why I filed the bug instead of just fixing the build.

According to the changelog, the quirk is mac specific

* Shared/Plugins/PluginQuirks.h:
Add Mac specific CanShortCircuitSomeNPRuntimeCallsDuringInitialization quirk.
Comment 5 Anders Carlsson 2011-05-19 09:42:25 PDT
(In reply to comment #2)
> (From update of attachment 94048 [details])
> Wouldn't it be better to define PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization instead of introducing #ifdefs?

I'd really like platform-specific quirks to be #ifdeffed out so we know which platforms they apply to.
Comment 6 Carlos Garcia Campos 2011-05-19 09:51:26 PDT
Committed r86848: <http://trac.webkit.org/changeset/86848>