2011-05-19  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Anders Carlsson.

        Fix build with ENABLE_PLUGIN_PROCESS=1 for non-mac platforms after r86578
        https://bugs.webkit.org/show_bug.cgi?id=61113

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::tryToShortCircuitInvoke):
        (WebKit::PluginControllerProxy::tryToShortCircuitEvaluate):

git-svn-id: svn://svn.chromium.org/blink/trunk@86848 bbb929c8-8fbe-4397-9dbb-9b2b20218538