third_party/WebKit/Source/WebKit2/PluginProcess/PluginControllerProxy.cpp
@@ -291,9 +291,13 @@ bool PluginControllerProxy::evaluate(NPObject* npObject, const String& scriptStr
 bool PluginControllerProxy::tryToShortCircuitInvoke(NPObject* npObject, NPIdentifier methodName, const NPVariant* arguments, uint32_t argumentCount, bool& returnValue, NPVariant& result)
 {
     // Only try to short circuit evaluate for plug-ins that have the quirk specified.
+#if PLUGIN_ARCHITECTURE(MAC)
     if (!PluginProcess::shared().netscapePluginModule()->pluginQuirks().contains(PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization))
         return false;
-    
+#else
+    return false;
+#endif
+
     // And only when we're in initialize.
     if (!inInitialize())
         return false;
@@ -590,8 +594,12 @@ void PluginControllerProxy::privateBrowsingStateChanged(bool isPrivateBrowsingEn
 bool PluginControllerProxy::tryToShortCircuitEvaluate(NPObject* npObject, const String& scriptString, NPVariant* result)
 {
     // Only try to short circuit evaluate for plug-ins that have the quirk specified.
+#if PLUGIN_ARCHITECTURE(MAC)
     if (!PluginProcess::shared().netscapePluginModule()->pluginQuirks().contains(PluginQuirks::CanShortCircuitSomeNPRuntimeCallsDuringInitialization))
         return false;
+#else
+    return false;
+#endif
 
     // And only when we're in initialize.
     if (!inInitialize())
